# microservices

./: .gitignore  go.work  go.work.sum
api-gateway/: go.mod  go.sum
api-gateway/cmd/: main.go
api-gateway/internal/client/: user.client.go  user_client.go
api-gateway/internal/handler/: user_handler.go
api-gateway/pkg/: auth_middleware.go  cookies.go
api-gateway/server/: api.go  routes.go
posts/: .env  Cargo.toml  Dockerfile
posts/src/: config.rs  handler.rs  main.rs  middlewares.rs  process.rs  repository.rs  types.rs  validate.rs
posts/src/kafka/: connection.rs  consumer.rs  mod.rs  producer.rs
trends/: analyzer.py  dashboard.py  main.py  makefile  requirements.txt
users-services/: .env.development  Makefile  go.mod  go.sum
users-services/cmd/: main.go
users-services/config/: database.go
users-services/internal/: jwt_token.go  user_grpc_server.go  user_handler.go  user_models.go  user_repository.go  user_services.go
users-services/migrations/: 000001_create_users.up.sql
users-services/pkg/: response.go
users-services/proto/: user.pb.go  user.proto  user_grpc.pb.go
