[package]
name = "posts_service"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "tls-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
rdkafka = "0.39.0"
serde_json = "1"
uuid = { version = "1.21.0", features = ["v4"] }

